--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8080
 #spring.profiles.active=dev
 
 spring.data.rest.default-page-size=10
+#spring.data.rest.base-path=api/
 
 spring.thymeleaf.cache=false
 server.servlet.session.timeout=30m
