--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,10 +31,30 @@ spring.datasource.password=
 spring.sql.init.mode=always
 
 # ===============================
+# = OPEN API CONFIGURATION HERE
+# ===============================
+# Disable Schemas on Open API UI
+springdoc.swagger-ui.defaultModelsExpandDepth=-1
+#springdoc.packages-to-exclude=com.springboot.license.manager.controller
+
+# ===============================
 # = SPRING JPA CONFIGURATION HERE
 # ===============================
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.defer-datasource-initialization=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+
+# =====================================
+# = SPRING DATA REST CONFIGURATION HERE
+# ===================================== 
+# Exposes all public repository interfaces but considers @(Repository)RestResource\u2019s `exported flag.
+#spring.data.rest.detection-strategy=default
+# Exposes all repositories independently of type visibility and annotations.
+#spring.data.rest.detection-strategy=all
+# Only repositories annotated with @(Repository)RestResource are exposed, unless their exported flag is set to false.
+spring.data.rest.detection-strategy=annotated
+# Only public repositories annotated are exposed.
+#spring.data.rest.detection-strategy=visibility
 
