--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,7 +44,7 @@ springdoc.swagger-ui.defaultModelsExpandDepth=-1
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.defer-datasource-initialization=true
 #spring.jpa.properties.hibernate.format_sql=true
-
+spring.jpa.open-in-view=false
 
 # =====================================
 # = SPRING DATA REST CONFIGURATION HERE
